--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,16 @@ Vlastní struktura pro nekoněčně dlouhé řetězce
 	- strRaw - vrácí ukazatel na char*
 	- strLen - vrátí délku řetězce
 	- strSize - vrátí naalokovanou velikost
-	
+
+Struktura pro práci s vyváženým binárním stromem
+ - struktura (tBTree) bude reprezentovat binární strom, kde jednotlivé uzly budou reprezentovány strukturami (tbTreeNode), klíčem by měl být název, tudíž prozatím tString
+ - funkce:
+	- btInit - iniciliazce binarního stromu
+	- btFree - uvolnění binárního stromu
+	- btInsert - vložení prvku do stromu
+	- btFind - vyhledání v binárním stromu
+
+#### Splněno Filgy, 21.10.	
 Struktura pro práci se zásobníkem (postavené nad jednocestným seznamem)
  - struktura (tStack) by měla obsahovat linerárně řetězený seznam struktur (tStackItem)
  - funkce:
@@ -22,13 +31,3 @@ Struktura pro práci se zásobníkem (postavené nad jednocestným seznamem)
 	- stackPop - vybírá tStackItem z vrcholu zásobníku
 	- stackSize - vrací počet položek v zásobníku
 	- stackTop - vrací tStackItem na vrcholu zásobníku
-
-Struktura pro práci s vyváženým binárním stromem
- - struktura (tBTree) bude reprezentovat binární strom, kde jednotlivé uzly budou reprezentovány strukturami (tbTreeNode), klíčem by měl být název, tudíž prozatím tString
- - funkce:
-	- btInit - iniciliazce binarního stromu
-	- btFree - uvolnění binárního stromu
-	- btInsert - vložení prvku do stromu
-	- btFind - vyhledání v binárním stromu
-	
-	
